# ucinfo

./: Cargo.toml  README.md  build.rs
crates/font/: Cargo.toml  build.rs
crates/font/src/: bitmap.rs  draw.rs  lib.rs  test_consts.rs  unifont.rs
crates/htmlentities/: Cargo.toml  build.rs
crates/htmlentities/src/: lib.rs
crates/unicodedata-build/: Cargo.toml
crates/unicodedata-build/src/: main.rs
data/unifont/: metadata.json
src/: cmdline.rs  glyph.rs  main.rs
