[workspace]
members = [
    "crates/font"
]
resolver = "2"

[workspace.package]
authors = ["André Kugland <kugland@gmail.com>"]
description = "A CLI tool to show information about Unicode characters."
homepage = "https://github.com/kugland/ucinfo"
repository = "https://github.com/kugland/ucinfo"
version = "0.0.1"
edition = "2024"
license = "GPL-3.0"
rust-version = "1.88.0"

[workspace.dependencies]
log = "0.4.29"
parse-display = { version = "0.10.0", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
serde_json = "1.0.145"
indoc = "2.0.7"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
opt-level = "z"
