[package]
name = "ucinfo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
hex = "0.4.3"
once_cell = "1.19.0"
regex = "1.10.3"

[dev-dependencies]
hex-literal = "0.4.1"
indoc = "2.0.4"

[build-dependencies]
anyhow = "1.0.80"
hex = "0.4.3"
