[package]
name = "unifont"
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true

[dev-dependencies]
indoc.workspace = true
hex-literal = "1.1.0"

[build-dependencies]
anyhow.workspace = true
serde_json.workspace = true
hex = "0.4.3"

